# diamond

./: .gitattributes  .gitignore  .gitleaks.toml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  deny.toml  justfile  rustfmt.toml
.cargo/: config.toml
.config/: nextest.toml
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-on-release.yml  release.yml
docs/: COMMANDS.md  COMPLETIONS.md  CONFIGURATION.md  GETTING_STARTED.md  TROUBLESHOOTING.md  WORKFLOWS.md
src/: branch_tree.rs  cache.rs  completion.rs  config.rs  context.rs  main.rs  operation_log.rs  platform.rs  program_name.rs  stack_viz.rs  state.rs  test_context.rs  validation.rs  worktree.rs
src/commands/: abort.rs  absorb.rs  bottom.rs  checkout.rs  cleanup.rs  completion.rs  config_cmd.rs  continue_op.rs  create.rs  delete.rs  doctor.rs  down.rs  fold.rs  freeze.rs  gc.rs  get.rs  history.rs  info.rs  init.rs  merge.rs  mod.rs  modify.rs  move_cmd.rs  passthrough.rs  pop.rs  pr.rs  rename.rs  reorder.rs  restack.rs  split.rs  squash.rs  sync.rs  top.rs  track.rs  undo.rs  (+3 more)
tests/: basic_tests.rs  battle_hardness_tests.rs  config_tests.rs  corruption_detection_tests.rs  edge_cases_tests.rs  metadata_cleanup_tests.rs  multi_clone_tests.rs  navigation_tests.rs  passthrough_tests.rs  reftable_comprehensive_tests.rs  reftable_tests.rs  stack_ops_tests.rs  submit_pr_tests.rs  sync_restack_tests.rs  tty_tests.rs  worktree_tests.rs
(+46 files in other folders)
